# web-app-core

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json  settings.json.explain.js
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: README.md  env.py
backend/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  crud.py
design/: README.md
docs/: README.md  claude.md  deployment.md  packages.md  plan.md
docs/deploy/: cloudflare.md
docs/logic/: how-project-works-and-user-flows.md
frontend/: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-workspace.yaml  vite.config.ts  wrangler.jsonc
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/auth/: protected-route.tsx
frontend/src/lib/: api-client.ts  i18n.ts  utils.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/uk/: translation.json
frontend/src/stores/: auth.ts  theme.ts
frontend/src/types/: api.ts
