[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1,<0.137.0",
    "uvicorn>=0.46.0,<0.47.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-multipart>=0.0.27,<0.0.28",
    "sqlalchemy[asyncio]>=2.0.49,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "alembic>=1.18.4,<2.0.0",
    "greenlet>=3.5.0,<4.0.0",
    "email-validator>=2.3.0,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2.0.0",
    "pytest>=9.0.3,<10.0.0",
    "ruff>=0.13.3,<0.14.0",
    "pytest-asyncio>=1.3.0,<2.0.0"
]

[tool.poetry]
package-mode = false

[tool.mypy]
python_version = "3.13"
files = ["app", "tests"]
warn_unused_ignores = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
